--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "tinyapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "express_server.js",
   "scripts": {
+    "start": "./node_modules/.bin/nodemon -L express_server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,5 +24,8 @@
     "express": "^4.17.1",
     "express-redirect": "^1.2.2",
     "wjs": "^4.2.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
